# tbl

./: .gitignore  Cargo.toml  README.md  design.md  preprocess.py  tbl.pest  tbl_rt.c  tbl_rt_mt.c  tcb.h
docs/: README.md
examples/: apply.tbl  array.tbl  array_struct.tbl  basic.tbl  basic2.tbl  basic_task.tbl  bool.tbl  cast.tbl  counter.tbl  enum.tbl  fac.tbl  fib.tbl  file_io.tbl  global.tbl  if.tbl  impl.tbl  int.tbl  loop.tbl  minimal.tbl  multifun.tbl  ops.tbl  ptr.tbl  sched.tbl  sched_exit.tbl  sizeof.tbl  std.tbl  str.tbl  struct.tbl  struct_return.tbl  udp.tbl
lib/: io.tbl  socket.tbl  std.tbl
src/: ast.rs  codegen.rs  main.rs
src/codegen/: context.rs  debug_info.rs  generate.rs  mod.rs
src/parse/: mod.rs  parse.rs  types.rs
tbl/: Cargo.toml  tbl.pest
tbl-vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
tbl-vscode/syntaxes/: tbl.tmLanguage.json
tbl/src/: ast.rs  codegen.rs  main.rs  module.rs  parse.rs
tbl/src/codegen/: context.rs  debug_info.rs  generate.rs  mod.rs
tbl/src/parse/: parse.rs  types.rs
tbl_analysis/: Cargo.toml
tbl_analysis/src/: lib.rs
tbl_codegen/: Cargo.toml  build.rs
tbl_codegen/src/: context.rs  debug_info.rs  error.rs  generate.rs  lib.rs  tcb.rs
tbl_lsp/: Cargo.toml
tbl_lsp/src/: main.rs
tbl_parser/: Cargo.toml
tbl_parser/examples/: debug.rs  simple.rs
tbl_parser/src/: error.rs  lib.rs  module.rs  pattern.rs  token.rs  types.rs
tree-sitter-tbl/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-tbl/bindings/c/: tree-sitter-TBL.h  tree-sitter-TBL.pc.in  tree-sitter-tbl.pc.in
tree-sitter-tbl/bindings/c/tree_sitter/: tree-sitter-tbl.h
tree-sitter-tbl/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-tbl/bindings/node/: binding.cc  index.js
tree-sitter-tbl/bindings/python/tests/: test_binding.py
tree-sitter-tbl/bindings/python/tree_sitter_tbl/: __init__.py  binding.c
tree-sitter-tbl/bindings/rust/: build.rs  lib.rs
tree-sitter-tbl/bindings/swift/TreeSitterTBLTests/: TreeSitterTBLTests.swift
tree-sitter-tbl/queries/: highlights.scm
tree-sitter-tbl/src/: grammar.json  node-types.json  parser.c
