[package]
name = "tbl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
cranelift = "0.103.0"
cranelift-module = "0.103.0"
cranelift-object = "0.103.0"
itertools = "0.12.0"
miette = { version = "5.10.0", features = ["fancy"] }
pest = "2.7.5"
pest_derive = { version = "2.7.5", features = ["grammar-extras"] }
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
snailquote = "0.3.1"
target-lexicon = "0.12.12"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
urlencoding = "2.1.3"
