[package]
name = "tbl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
color-eyre = "0.6.2"
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
llvm-sys = { version = "160", features = ["prefer-dynamic"] }
pest = "2.7.1"
pest_derive = "2.7.1"
