[package]
name = "tbl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
cranelift = "0.117.2"
cranelift-module = "0.117.2"
cranelift-object = "0.117.2"
itertools = "0.14.0"
miette = { version = "7.1.0", features = ["fancy"] }
target-lexicon = "0.13.2"
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
urlencoding = "2.1.3"
tbl_codegen = { path = "../tbl_codegen" }
tbl_parser = { path = "../tbl_parser" }
ariadne = "0.5.0"
