[package]
name = "tbl_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tbl_parser = { path = "../tbl_parser" }
cranelift = "0.105.1"
cranelift-module = "0.105.1"
cranelift-object = "0.105.1"
miette = "7.2.0"
tracing = "0.1.40"
