[package]
name = "tbl_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tbl_parser = { path = "../tbl_parser" }
cranelift = "0.117.2"
cranelift-module = "0.117.2"
cranelift-object = "0.117.2"
tracing = "0.1.40"
thiserror = "2.0.12"

[build-dependencies]
bindgen = "0.71.1"
