[package]
name = "tbl_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tbl_parser = { version = "0.1.0", path = "../tbl_parser" }
tokio = { version = "1.36.0", features = ["full"] }
tower-lsp = "0.20.0"
